--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -25,7 +25,7 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 thiserror = { workspace = true }
 tracing = { workspace = true }
-wry = { workspace = true, default-features = false, features = ["os-webview", "protocol", "drag-drop"] }
+wry = { workspace = true, default-features = false, features = ["os-webview", "protocol", "drag-drop", "tracing" ] }
 futures-channel = { workspace = true }
 tokio = { workspace = true, features = [
   "sync",
@@ -44,7 +44,7 @@ dioxus-hooks = { workspace = true }
 futures-util = { workspace = true }
 percent-encoding = { workspace = true }
 async-trait = { workspace = true }
-tao = { workspace = true, features = ["rwh_05"] }
+winit = { workspace = true, features = ["rwh_06", "android-game-activity"] }
 dioxus-history = { workspace = true }
 base64 = { workspace = true }
 libc = "0.2.174"
